# rootio

./: .gitignore  Makefile  README.md  aux.c  aux.h  bootstrap.c  bootstrap.h  debug.c  debug.h  iolayer.c  iolayer.h  simulations.c  simulations.h
c/: CMakeLists.txt
c/src/rootio/core/: CMakeLists.txt  aux.c  iolayer.c  iolayer.h  logical_structure.c  logical_structure.h  simulations.c  simulations.h
c/src/rootio/core/core/: Makefile  cmake_install.cmake
c/src/rootio/core/core/tests/: Makefile  cmake_install.cmake
c/src/rootio/core/tests/: CMakeLists.txt  dump_dirstructure_recursively.c  dump_records.c  test1.c  test_read_sequentially.c  test_write.c
cpp/: README.md
cpp/cmake/modules/: FindHDFS.cmake
cpp/src/rootio/: CMakeLists.txt
cpp/src/rootio/core/: CMakeLists.txt  aux.h  debug.c  debug.h  localfs.c  localfs.h  simulations.h
cpp/src/rootio/core/hdfs/: 1  CMakeLists.txt  fs.c  fs.h
cpp/src/rootio/core/hdfs/tests/: CMakeLists.txt  dump_records_from_hdfs.c
cpp/src/rootio/core/tests/: CMakeLists.txt  dump_dirstructure_recursively.c  test_write.c
cpp/src/rootio/corecpp/: CMakeLists.txt  test.cpp  test.hpp
cpp/src/rootio/corecpp/root-tests/: CMakeLists.txt  write_th1.cpp
cpp/src/rootio/corecpp/tests/: CMakeLists.txt  test_read.cpp
cpp_new/: CMakeLists.txt  readme.md
cpp_new/src/XXX/core/: CMakeLists.txt
cpp_new/src/XXX/core/baselogic/: CMakeLists.txt  Decls.cpp  Decls.hpp
cpp_new/src/XXX/core/baselogic/tests/: CMakeLists.txt  test_baselogic_reading.cpp
cpp_new/src/XXX/core/common/: CMakeLists.txt  aux.cpp  aux.hpp
cpp_new/src/XXX/core/phys/: CMakeLists.txt  Decls.cpp  Decls.hpp  Extensions.cpp  Extensions.hpp  test.cpp  test.hpp
cpp_new/src/XXX/core/phys/tests/: CMakeLists.txt  extensions.hpp  simple_test.cpp  simple_test_1.cpp  test_reading.cpp  test_writing.cpp
docs/: types_c.md
old_tests/: test_streamerinfo  unzip.h
test_c/: Makefile  test0.c  test_print_recursively.c  test_read.c  test_read_sequentially.c  test_streamerinfo.c  test_write.c
test_cpp/: Makefile  test0  test0.cpp  test_read.cpp  test_write_th1.cpp
test_old/: Makefile  test1  test1.c  test1_v2  test1_v2.c  test_free_segments
test_python/: defs.py  sugar.py  test_read.py  test_read_sequentially.py  test_write.py
test_rust/: Cargo.toml
test_rust/src/: bootstrap.rs  iolayer.rs  lib.rs  main.rs
tests/: test0  test0.c  test1.c  test_free_segments.c  test_print_recursively.c  test_read.c  test_read_sequentially.c  test_streamerinfo.c  test_write  test_write.c
tests/rtest/: Cargo.toml  build.rs
